[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 95
# This somehow does not work...the excludes are defined in the pre-commit-config.yaml for now
# exclude = ["setup.py", "docs", "tests/*", "xmip/_version.py"]
verbose = 1
quiet = false
color = true

[tool.isort]
known_third_party = ["cf_xarray", "cftime", "dask", "fsspec", "numpy", "pint", "pint_xarray", "pkg_resources", "pytest", "setuptools", "xarray", "xarrayutils", "xesmf", "xgcm", "yaml"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = " -vv -rXfE"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = [
    "tests",
]
