[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = cmip6_preprocessing/_version.py


[metadata]
name = cmip6_preprocessing
description = Analysis ready CMIP6 data the easy way
author = cmip6_preprocessing developers
url=https://github.com/jbusecke/cmip6_preprocessing
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Dont change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = jbusecke@princeton.edu


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    pandas
    xarray
    xgcm
    cftime
    xarrayutils
    pint
    cf_xarray >= 0.6.0
    pint-xarray
setup_requires=
    setuptools
    setuptools-scm
python_requires = >=3.6
################ Up until here

include_package_data = True
zip_safe = False
packages = find:
